# prx-memory

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  PRX_MEMORY_EVOLUTION_PAPER_CN.md  PRX_MEMORY_EVOLUTION_PAPER_EN.md  README.md  clippy.toml  codex.md  deny.toml
.github/workflows/: ci.yml  release.yml
crates/protoc-helper/: Cargo.toml
crates/protoc-helper/src/: main.rs
crates/prx-memory-ai/: Cargo.toml
crates/prx-memory-ai/src/: config.rs  factory.rs  lib.rs  mses.rs  traits.rs  types.rs  viability.rs
crates/prx-memory-ai/src/providers/: jina.rs  mod.rs  openai_compatible.rs
crates/prx-memory-ai/tests/: holdout_regression.rs
crates/prx-memory-core/: Cargo.toml
crates/prx-memory-core/src/: evolution.rs  lib.rs  mses.rs
crates/prx-memory-embed/: Cargo.toml
crates/prx-memory-embed/src/: config.rs  error.rs  factory.rs  lib.rs  traits.rs  types.rs
crates/prx-memory-embed/src/providers/: gemini.rs  jina.rs  mod.rs  openai_compatible.rs
crates/prx-memory-mcp/: Cargo.toml
crates/prx-memory-mcp/src/: lib.rs  main.rs  protocol.rs  server.rs
crates/prx-memory-mcp/tests/: http_flow.rs  stdio_flow.rs  tool_flow.rs
crates/prx-memory-rerank/: Cargo.toml
crates/prx-memory-rerank/src/: config.rs  factory.rs  traits.rs  types.rs
crates/prx-memory-rerank/src/providers/: cohere.rs  jina.rs  mod.rs  pinecone.rs
crates/prx-memory-skill/: Cargo.toml
crates/prx-memory-skill/src/: lib.rs
crates/prx-memory-storage/: Cargo.toml
crates/prx-memory-storage/src/: lib.rs
crates/prx-memory-storage/tests/: perf_100k.rs
data/holdout/: evolution_cases.json
docs/: CHANGELOG.md  README.md  ROADMAP.md
docs/archive/: PROJECT_RESEARCH_PLAN_2026-02-26.md
docs/engineering/: ACCEPTANCE_CHECKLIST.md  ALERT_RULES_PRX_MEMORY.yml  GO_LIVE_VALIDATION.md  INSTALL_AND_TROUBLESHOOTING.md  OBSERVABILITY.md  OBSERVABILITY_DASHBOARD.json  ORCHESTRATION.md  PERF_REPORT_100K.md
docs/task/: ALIGNMENT_GAP_EXECUTION_PLAN.md  MCP_PRX_MEMORY_REGRESSION_2026-02-26.md  TASK_EXECUTION_STANDARD.md
scripts/: run_holdout_regression.sh  run_multi_client_validation.sh  run_perf_100k.sh  run_soak_http.sh
skills/: README.md
skills/prx-memory-governance/: SKILL.md
skills/prx-memory-governance/references/: memory-governance.md  tag-taxonomy.md
skills/prx-memory-governance/scripts/: generate_dual_layer_template.sh  validate_memory_entry.sh
