[workspace]
members = [
    "crates/prx-memory-core",
    "crates/prx-memory-embed",
    "crates/prx-memory-rerank",
    "crates/prx-memory-skill",
    "crates/prx-memory-ai",
    "crates/prx-memory-mcp",
    "crates/prx-memory-storage",
]
resolver = "2"

[workspace.package]
authors = ["g1e2x87"]
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Embedding, reranking, and semantic memory for PRX agent"
repository = "https://github.com/openprx/prx-memory"

[workspace.lints.rust]
unsafe_code = "deny"
unused_must_use = "deny"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
unreachable = "deny"
indexing_slicing = "deny"

dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"
undocumented_unsafe_blocks = "deny"

inefficient_to_string = "deny"
large_futures = "warn"

module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
cast_possible_truncation = "warn"
cast_sign_loss = "warn"
cast_precision_loss = "warn"
cast_lossless = "warn"
too_many_lines = "allow"
