[package]
name = "prx-memory-ai"
version = "0.1.0"
edition = "2021"
description = "Provider abstraction for embeddings and rerank in prx-memory"
license = "MIT"

[dependencies]
prx-memory-core = { path = "../prx-memory-core" }
prx-memory-embed = { path = "../prx-memory-embed" }
prx-memory-rerank = { path = "../prx-memory-rerank" }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
