[package]
name = "prx-memory-mcp"
version = "0.1.0"
edition = "2021"
description = "Local MCP server surface for prx-memory"
license = "MIT"
authors = ["g1e2x87"]

[features]
default = []
lancedb-backend = ["prx-memory-storage/lancedb-backend"]

[dependencies]
prx-memory-core = { path = "../prx-memory-core" }
prx-memory-embed = { path = "../prx-memory-embed" }
prx-memory-rerank = { path = "../prx-memory-rerank" }
prx-memory-skill = { path = "../prx-memory-skill" }
prx-memory-storage = { path = "../prx-memory-storage" }
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }

[dev-dependencies]

[lints]
workspace = true
