[package]
name = "prx-memory-rerank"
version = "0.1.0"
edition = "2021"
description = "Rerank provider abstraction and adapters for prx-memory"
license = "MIT"

[dependencies]
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
